alpha commit fixes

--- a/workflow/envs/conda.gatk3.yaml
+++ b/workflow/envs/conda.gatk3.yaml
@@ -1,10 +1,10 @@
 #---- Bioconda config for salsa2 ----
 
-"name": "salsa2"
+"name": "gatk3"
 "channels":
   - "bioconda"
   - "conda-forge"
   - "anaconda"
 "dependencies":
   - "python>=2.7"
-  - "salsa2"
+  - "gatk3"
