--- a/config/default.yaml
+++ b/config/default.yaml
@@ -96,8 +96,8 @@
                     - 5
                     - 6
                 "config_file_parameters":
-                    "BURNIN":                    100000
-                    "NUMREPS":                   1000000
+                    "BURNIN":                    10000
+                    "NUMREPS":                   100000
                     "LABEL":                     1
                     "POPDATA":                   0
                     "POPFLAG":                   0
