alpha commit fixes

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -55,6 +55,7 @@
             "generate_config_for_clumpp":     1
             "clumpp":                         1
             "pong":                           2
+            "create_files_for_pong":        1
 
         "memory_mb":
             "extract_alignments":               1000
@@ -73,8 +74,9 @@
             "generate_config_for_clumpp":       100
             "clumpp":                           3000
             "pong":                             3000
+            "create_files_for_pong":          100
 
-        "time": #TODO: adjust
+        "time": #qTODO: adjust
             "extract_alignments":               "00:05:00"
             "add_flanks":                       "00:05:00"
             "extract_properly_mapped_reads":    "01:00:00"
@@ -90,6 +92,7 @@
             "generate_config_for_clumpp":       "00:05:00"
             "clumpp":                           "02:00:00"
             "pong":                             "02:00:00"
+            "create_files_for_pong":          "00:05:00"
 
         "tool_options":
             "hipSTR":
