--- a/config/default.yaml
+++ b/config/default.yaml
@@ -56,6 +56,7 @@
             "clumpp":                         1
             "generate_pong_script":           2
             "create_files_for_pong":          1
+            "extract_loci_sets":              1
 
         "memory_mb":
             "extract_alignments":               1000
@@ -75,6 +76,7 @@
             "clumpp":                           3000
             "generate_pong_script":             3000
             "create_files_for_pong":            100
+            "extract_loci_sets":                100
 
         "time": #qTODO: adjust
             "extract_alignments":               "00:05:00"
@@ -93,6 +95,7 @@
             "clumpp":                           "02:00:00"
             "generate_pong_script":             "02:00:00"
             "create_files_for_pong":            "00:05:00"
+            "extract_loci_sets":                "00:05:00"
 
         "tool_options":
             "hipSTR":
@@ -224,8 +227,12 @@
 "flank_len":        1000                # length of flank to use for first step of alignment extraction
 "str_repeat_bed":   "str_repeat.bed"    # Bed file with coordinates and monomer info of the repeats within  str loci
 "str_loci_len_file": null
-"pop_file": null # two column tab-separated file. First column should contain sample ids, second - population ids
-
+"pop_file": null            # two column tab-separated file. First column should contain sample ids,
+                            # second - population ids
+"loci_set_fam_file": null # two colomn tab-separated file. First colum contains labels for sets of loci,
+                            # second - comma-separated list of loci included in the sets. Sets might overlap.
+                            # Sets will be analysed separately for admixture.
+                            # If absent, all loci will be combined in a single set
 "absent_allel_alias": "-100"
 
 
@@ -235,13 +242,6 @@
 #      <sample_id>/
 #                 <sample_id><bam_suffix>.bam
 #                 <sample_id><bam_suffix>.bam.bai
-
-#---- Pipeline modes ----
-
-#"mode": "assembly"                # Allowed: "preprocessing", "qc", "assembly"
-#"preprocessing_mode": "default"   # Allowed: "default"
-#"qc_mode": "default"              # Allowed: "default"
-#"assembly_mode": "full"           # Allowed: "default", "full", "purge_dups", "contig"; custom modes could be set in config file
 
 
 "parameter_set": "default" # Choice of genome-size based set of parameters
