add missing tools

--- a/workflow/envs/conda.common.yaml
+++ b/workflow/envs/conda.common.yaml
@@ -4,10 +4,15 @@
   - "bioconda"
   - "conda-forge"
   - "anaconda"
+  - "ipyrad"
   - "mahajrod"
 "dependencies":
   - "pyvcf"
   - "samtools"
   - "bazam"
   - "bwa"
+  - "structure"
+  - "clumpp"
+  - "routoolpa"
+  - "mavr"
   - "mace"
